2003-10-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add the 2.6 modules.

2003-09-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgnome, libgnomecanvas and
	libgnomeui have been branched.

2003-09-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: rhythmbox has been branched.

2003-09-28  Carlos Perelló Marín <carlos@gnome.org>

	* status-gnome.xml: Added a default team information.

2003-09-28  Carlos Perelló Marín <carlos@gnome.org>

	* status-gnome.xml: Added a sample about team information.

2003-09-27  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: gconf has been branched.

2003-09-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-terminal has been branched.

2003-09-21  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Updated branch for "gal".

2003-09-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added giftoxic.

2003-09-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added conglomerate.

2003-09-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added libgnomesu.

2003-09-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-media has been branched.

2003-09-17  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Fixed gtkhtml branch, gal branch.

2003-09-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-panel and gnome-applets have
	been branched.

2003-09-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added webeyes.

2003-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gedit has been branched.

2003-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added hardware-monitor and
	monster-masher.

2003-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf-editor has been branched.
