@@ -85,15 +85,6 @@
     </version>
   </module>
   <module name="anjuta">
-    <version release="gnome-1.4">
-      <component name="anjuta" dir="anjuta" group="fifth-toe">
-	<podir dir="po"/>
-	<potname name="anjuta.pot"/>
-	<branch name="ANJUTA_1_0_0"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
     <version release="gnome-2.6">
       <component name="anjuta" dir="anjuta" group="developer-app">
         <podir dir="po"/>
@@ -156,15 +147,6 @@
     </version>
   </module>
   <module name="balsa">
-    <version release="gnome-1.4">
-      <component name="balsa" dir="balsa" group="fifth-toe">
-	<podir dir="po"/>
-	<potname name="balsa.pot"/>
-	<branch name="balsa-1-4"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
     <version release="gnome-2.6">
       <component name="balsa" dir="balsa" group="fifth-toe">
         <podir dir="po"/>
@@ -419,15 +401,6 @@
     </version>
   </module>
   <module name="galeon">
-    <version release="gnome-1.4">
-      <component name="galeon" dir="galeon" group="fifth-toe">
-	<podir dir="po"/>
-	<potname name="galeon.pot"/>
-	<branch name="galeon-1-2"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
     <version release="gnome-2.6">
       <component name="galeon" dir="galeon" group="fifth-toe">
 	<podir dir="po"/>
@@ -1564,15 +1537,6 @@
     </version>
   </module>
   <module name="guikachu">
-    <version release="gnome-1.4">
-      <component name="guikachu" dir="guikachu" group="extras">
-        <podir dir="po"/>
-	<potname name="guikachu.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
     <version release="gnome-2.6">
       <component name="guikachu" dir="guikachu" group="extras">
 	<podir dir="po"/>
@@ -2095,7 +2059,7 @@
     </version>
   </module>
   <module name="pybliographer">
-    <version release="gnome-1.4">
+    <version release="gnome-2.6">
       <component name="pybliographer" dir="pybliographer" group="extras">
 	<podir dir="po"/>
 	<potname name="pybliographer.pot"/>
