@@ -1,5 +1,9 @@
 2003-10-02  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Removed some 1.4 versions.
+
+2003-10-02  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Tried to add the 2.6 modules.
 
 2003-09-29  Christian Rose  <menthos@menthos.com>
